--- a/index.html
+++ b/index.html
@@ -70,11 +70,7 @@
         <h2>Чим ми займаємося</h2>
         <ul>
           <li>
-            <img
-              src="./images/box1.jpg"
-              alt="someome_is_typing"
-              width="294"
-            />
+            <img src="./images/box1.jpg" alt="someome_is_typing" width="294" />
           </li>
           <li>
             <img
@@ -123,17 +119,18 @@
       <address>
         <ul>
           <li>
-            <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a>
+            <a
+              href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              >м. Київ, пр-т Лесі Українки, 26</a
+            >
           </li>
           <li>
-            <p>
-              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </p>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
-            <p>
-              <a href="tel:+380961111111">+38 096 111 11 11</a>
-            </p>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
