Змінено мову описів для img

--- a/index.html
+++ b/index.html
@@ -72,19 +72,19 @@
         <h2>Чим ми займаємося</h2>
         <ul>
           <li>
-            <img src="./images/box1.jpg" alt="someome_is_typing" width="294" />
+            <img src="./images/box1.jpg" alt="Людина друкує на комп'ютері" width="294" />
           </li>
           <li>
             <img
               src="./images/box2.jpg"
-              alt="someone_is_using_phone_and_laptop_at_the_same_time"
+              alt="Людина одночасно використовує телефон і ноутбук"
               width="294"
             />
           </li>
           <li>
             <img
               src="./images/box3.jpg"
-              alt="someone_is_looking_at_the_spectrum_of_colors"
+              alt="Хтось переглядає спектр кольорів"
               width="294"
             />
           </li>
@@ -94,22 +94,22 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="./images/img1.jpg" alt="Ihor_Demyanenko" width="270" />
+            <img src="./images/img1.jpg" alt="Ігор_Дем'яненко" width="270" />
             <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/img2.jpg" alt="Olha_Repina" width="270" />
+            <img src="./images/img2.jpg" alt="Ольга_Рєпіна" width="270" />
             <h3>Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/img3.jpg" alt="Mykola_Tarasov" width="270" />
+            <img src="./images/img3.jpg" alt="Микола_Тарасов" width="270" />
             <h3>Микола Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/img4.jpg" alt="Myhailo_Ermakov" width="270" />
+            <img src="./images/img4.jpg" alt="Михайло_Єрмаков" width="270" />
             <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
           </li>
